fix openapi name, fix API path, fix API params, fix query, fix pagination