@@ -61,29 +61,31 @@ public class ManageApiKeyService {
         this.externalRegistriesClient = externalRegistriesClient;
     }
 
-    public Mono<ResponsePdndDto> changePdnd(List<ApiPdndDto> apiPdndDtos){
+    public Mono<ResponsePdndDto> changePdnd(List<ApiPdndDto> apiPdndDtos) {
         return Flux.fromIterable(apiPdndDtos)
-                .flatMap(apiPdndDto -> apiKeyRepository.changePdnd(apiPdndDto.getId(),apiPdndDto.getPdnd())
-                        .onErrorResume(throwable -> Mono.empty())
-                        .map(apiKeyModel -> apiPdndDto)
-                )
+                .flatMap(apiPdndDto -> apiKeyRepository.changePdnd(apiPdndDto.getId(), apiPdndDto.getPdnd())
+                        .onErrorResume(throwable -> {
+                            log.warn("can not update pdnd flag of key {} to {}", apiPdndDto.getId(), apiPdndDto.getPdnd(), throwable);
+                            return Mono.empty();
+                        })
+                        .map(apiKeyModel -> apiPdndDto))
                 .collectList()
-                .map(apiPdndChanged -> apiKeyBoConverter.convertToResponsePdnd(apiPdndDtos,apiPdndChanged));
+                .map(apiPdndChanged -> apiKeyBoConverter.convertToResponsePdnd(apiPdndDtos, apiPdndChanged));
     }
 
-    public Mono<List<ApiKeyModel>> changeVirtualKey(String xPagopaPnCxId, String virtualKey){
+    public Mono<List<ApiKeyModel>> changeVirtualKey(String xPagopaPnCxId, String virtualKey) {
         return apiKeyRepository.findByCxId(xPagopaPnCxId)
                 .map(apiKeyModels -> {
-                    if(apiKeyModels.isEmpty()){
+                    if (apiKeyModels.isEmpty()) {
                         throw new ApiKeyManagerException("ApiKey does not exist", HttpStatus.NOT_FOUND);
                     }
-                    if(apiKeyModels.size() > 1){
+                    if (apiKeyModels.size() > 1) {
                         throw new ApiKeyManagerException("Already exist a virtual key associated for this cxId", HttpStatus.BAD_REQUEST);
                     }
                     return apiKeyModels;
                 })
-                .flatMap(apiKeyModels -> apiKeyRepository.setNewVirtualKey(apiKeyModels,virtualKey))
-                .doOnNext(apiKeyModels -> log.info("Setted new virtual key:{} at api key with xPagopaPnCxId: {}",virtualKey,xPagopaPnCxId));
+                .flatMap(apiKeyModels -> apiKeyRepository.setNewVirtualKey(apiKeyModels, virtualKey))
+                .doOnNext(apiKeyModels -> log.info("Setted new virtual key:{} at api key with xPagopaPnCxId: {}", virtualKey, xPagopaPnCxId));
     }
 
     public Mono<ApiKeyModel> changeStatus(String id, RequestApiKeyStatusDto requestApiKeyStatusDto, String xPagopaPnUid, CxTypeAuthFleetDto xPagopaPnCxType) {
@@ -124,11 +126,11 @@ public class ManageApiKeyService {
                 });
     }
 
-    public Mono<ResponseApiKeysDto> getBoApiKeyList(@NonNull String xPagopaPnCxId){
+    public Mono<ResponseApiKeysDto> getBoApiKeyList(@NonNull String xPagopaPnCxId) {
         return apiKeyRepository.findByCxIdAndStatusRotateAndEnabled(xPagopaPnCxId)
                 .zipWith(externalRegistriesClient.getPaGroupsById(xPagopaPnCxId, null))
                 .map(this::decodeGroupIdsToGroupNames)
-                .map(apiKeyModelPage -> apiKeyBoConverter.convertResponsetoDto(apiKeyModelPage.items()));
+                .map(apiKeyModelPage -> apiKeyBoConverter.convertResponseToDto(apiKeyModelPage.items()));
     }
 
     public Mono<ApiKeysResponseDto> getApiKeyList(@NonNull String xPagopaPnCxId,
@@ -147,7 +149,7 @@ public class ManageApiKeyService {
         return apiKeyRepository.getAllWithFilter(xPagopaPnCxId, xPagopaPnCxGroups, pageable)
                 .zipWith(externalRegistriesClient.getPaGroupsById(xPagopaPnCxId, null))
                 .map(this::decodeGroupIdsToGroupNames)
-                .map(apiKeyModelPage -> apiKeyConverter.convertResponsetoDto(apiKeyModelPage, showVirtualKey))
+                .map(apiKeyModelPage -> apiKeyConverter.convertResponseToDto(apiKeyModelPage, showVirtualKey))
                 .zipWhen(page -> apiKeyRepository.countWithFilters(xPagopaPnCxId, xPagopaPnCxGroups))
                 .doOnNext(tuple -> tuple.getT1().setTotal(tuple.getT2()))
                 .map(Tuple2::getT1);
@@ -157,7 +159,7 @@ public class ManageApiKeyService {
         Page<ApiKeyModel> apiKeysFound = tuple.getT1();
         List<PaGroup> paGroups = tuple.getT2();
 
-        if(paGroups.isEmpty() || apiKeysFound.items().isEmpty()) {
+        if (paGroups.isEmpty() || apiKeysFound.items().isEmpty()) {
             return apiKeysFound;
         }
 
@@ -176,10 +178,11 @@ public class ManageApiKeyService {
     private Map<String, String> convertPaGroupsToMap(List<PaGroup> paGroups) {
         return paGroups.stream().collect(Collectors.toMap(PaGroup::getId, PaGroup::getName));
     }
+
     private List<String> getGroupNamesByGroupIds(List<String> groups, Map<String, String> mapGroupsIdToName) {
         return groups.stream()
                 .map(group -> mapGroupsIdToName.getOrDefault(group, group))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private Mono<ApiKeyModel> saveAndCheckIfRotate(ApiKeyModel apiKeyModel, ApiKeyModel oldApiKey, String status, String xPagopaPnUid) {
@@ -242,22 +245,19 @@ public class ManageApiKeyService {
 
     private ApiKeyStatusDto decodeStatus(String status, boolean history) {
         log.debug("Requested operation: {}", status);
-        switch (status) {
-            case BLOCK:
-                return BLOCKED;
-            case ENABLE:
-                return ApiKeyStatusDto.ENABLED;
-            case CREATE:
+        return switch (status) {
+            case BLOCK -> ApiKeyStatusDto.BLOCKED;
+            case ENABLE -> ApiKeyStatusDto.ENABLED;
+            case CREATE -> {
                 if (history) {
-                    return ApiKeyStatusDto.CREATED;
+                    yield ApiKeyStatusDto.CREATED;
                 } else {
-                    return ApiKeyStatusDto.ENABLED;
+                    yield ApiKeyStatusDto.ENABLED;
                 }
-            case ROTATE:
-                return ApiKeyStatusDto.ROTATED;
-            default:
-                throw new ApiKeyManagerException(APIKEY_INVALID_STATUS, HttpStatus.BAD_REQUEST);
-        }
+            }
+            case ROTATE -> ApiKeyStatusDto.ROTATED;
+            default -> throw new ApiKeyManagerException(APIKEY_INVALID_STATUS, HttpStatus.BAD_REQUEST);
+        };
     }
 
     private ApiKeyPageable toApiKeyPageable(Integer limit, String lastEvaluatedLastKey, String lastEvaluatedLastUpdate) {
